major cleanup of examples, standardizing the formats

--- a/examples/serenity.mdx
+++ b/examples/serenity.mdx
@@ -3,11 +3,15 @@ title: "Serenity"
 description: "Serenity is a Rust library for the Discord API."
 ---
 
-## Hello world bot
+This section revolves around simple Serenity examples you can get quickly started with by following these 4 steps:
+1. Go through the steps in **Prerequisites** below
+2. Initialize a new Serenity project by running the `cargo shuttle init --serenity` command
+3. Copy pasting the contents of the example you want to deploy -- make sure to check the tabs of the snippet(s) to ensure you are copying the right code/file
+4. Running the `cargo shuttle deploy` command
 
 ### Prerequisites
 
-In this example we will deploy a Serenity bot with Shuttle that responds to the `!hello` command with `world!`. To run this bot we need a valid Discord Token. To get started log in to the [Discord developer portal](https://discord.com/developers/applications).
+To get started log in to the [Discord developer portal](https://discord.com/developers/applications).
 
 1. Click the New Application button, name your application and click Create.
 2. Navigate to the Bot tab in the lefthand menu, and add a new bot.
@@ -20,34 +24,10 @@ To add the bot to a server we need to create an invite link.
 2. Go to the URL Generator via the lefthand panel, and select the `bot` scope as well as the `Send Messages` permission in the Bot Permissions section.
 3. Copy the URL, open it in your browser and select a Discord server you wish to invite the bot to.
 
-### Coding time
+### Hello World Bot
 
-Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Salvo boilerplate.
-
-```bash
-cargo shuttle init --serenity
-```
-
-Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
-
-```toml Cargo.toml
-[package]
-name = "hello-world"
-version = "0.1.0"
-edition = "2021"
-
-[lib]
-
-[dependencies]
-anyhow = "1.0.62"
-serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
-shuttle-secrets = "0.10.0"
-shuttle-service = { version = "0.10.0", features = ["bot-serenity"] }
-tracing = "0.1.35"
-```
-Your `lib.rs` should look like this:
-
-```Rust lib.rs
+<CodeGroup>
+```Rust src/main.rs
 use anyhow::anyhow;
 use serenity::async_trait;
 use serenity::model::channel::Message;
@@ -95,78 +75,15 @@ async fn serenity(
     Ok(client)
 }
 ```
-And your `Secrets.toml` file should look like this (and have your token inside):
-
 ```toml Secrets.toml
-DISCORD_TOKEN = 'the contents of my discord token'
+DISCORD_TOKEN = 'the contents of your discord token'
 ```
+</CodeGroup>
 
-Create a project, this will start an isolated deployer container for you under the hood:
-```bash
-cargo shuttle project new
-```
-Finally, to deploy your app, all you need to do is:
-```bash
-cargo shuttle deploy
-```
-## Todo list bot
 
-### Prerequisites
-
-In this example we will deploy a Serenity bot with Shuttle that can add, list and complete todos using [Application Commands](https://discord.com/developers/docs/interactions/application-commands). To persist the todos we need a database. We will have Shuttle provison a PostgreSQL database for us by enabling the `sqlx-postgres` feature for `shuttle-service` and passing `#[shared::Postgres] pool: PgPool` as an argument to our `main` function.
-
-To run this bot we need a valid Discord Token. To get started log in to the [Discord developer portal](https://discord.com/developers/applications).
-
-1. Click the New Application button, name your application and click Create.
-2. Navigate to the Bot tab in the lefthand menu, and add a new bot.
-3. On the bot page click the Reset Token button to reveal your token. Put this token in your `Secrets.toml`. It's very important that you don't reveal your token to anyone, as it can be abused. Create a `.gitignore` file to omit your `Secrets.toml` from version control.
-
-To add the bot to a server we need to create an invite link.
-
-1. On your bot's application page, open the OAuth2 page via the lefthand panel.
-2. Go to the URL Generator via the lefthand panel, and select the `applications.commands` scope.
-3. Copy the URL, open it in your browser and select a Discord server you wish to invite the bot to.
-
-For this example we also need a `GuildId`.
-
-1. Open your Discord client, open the User Settings and navigate to Advanced. Enable Developer Mode.
-2. Right click the Discord server you'd like to use the bot in and click Copy Id. This is your Guild ID.
-3. Store it in `Secrets.toml` and retrieve it like we did for the Discord Token.
-
-For more information please refer to the [Discord docs](https://discord.com/developers/docs/getting-started) as well as the [Serenity repo](https://github.com/serenity-rs/serenity) for more examples.
-
-### Coding time
-
-Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Salvo boilerplate.
-
-```bash
-cargo shuttle init --serenity
-```
-
-Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
-
-```toml Cargo.toml
-[package]
-name = "serenity-postgres"
-version = "0.1.0"
-edition = "2021"
-
-[lib]
-
-[dependencies]
-anyhow = "1.0.62"
-serde = "1.0"
-serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
-shuttle-secrets = "0.10.0"
-shuttle-service = { version = "0.10.0", features = ["bot-serenity"] }
-shuttle-shared-db = { version = "0.10.0", features = ["postgres"] }
-sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
-tracing = "0.1.35"
-```
-Your `lib.rs` should look like this:
-
-```Rust lib.rs
-// lib.rs
+### Todo list bot
+<CodeGroup>
+```Rust src/main.rs
 use anyhow::Context as _;
 use serenity::async_trait;
 use serenity::model::application::command::CommandOptionType;
@@ -324,10 +241,7 @@ async fn serenity(
 }
 ```
 
-Your `db.rs` should look like this:
-
-```rust db.rs
-// db.rs
+```rust src/db.rs
 use sqlx::{FromRow, PgPool};
 use std::fmt::Write;
 
@@ -383,7 +297,6 @@ pub(crate) async fn list(pool: &PgPool, user_id: i64) -> Result<String, sqlx::Er
     Ok(response)
 }
 ```
-Your `schema.sql` should look like this:
 
 ```sql schema.sql
 DROP TABLE IF EXISTS todos;
@@ -394,16 +307,11 @@ CREATE TABLE todos (
   note TEXT NOT NULL
 );
 ```
-And your `Secrets.toml` should look like this (make sure to replace the default values):
 
 ```toml Secrets.toml
-DISCORD_TOKEN = 'the contents of my discord token'
+DISCORD_TOKEN = 'the contents of your discord token'
 GUILD_ID = "123456789"
 ```
-
-Finally, to deploy your app, all you need to do is:
-```bash
-cargo shuttle deploy
-```
-
-And your app is live! 🎉🎉🎉
+</CodeGroup>
+---
+<Tip> If you're looking for other frameworks, we have more examples with other popular frameworks like Tower and Warp [right here](../examples/other). </Tip>
