--- a/examples/axum.mdx
+++ b/examples/axum.mdx
@@ -10,7 +10,7 @@ This section revolves around simple Axum examples you can get quickly started wi
 2. Copy pasting the contents of the example you want to deploy -- make sure to check the tabs of the snippet(s) to ensure you are copying the right code/file
 3. Running the `cargo shuttle deploy` command
 
-<Tip>If you are looking for step-by-step guides, check out our [How To](../tutorials) section</Tip>
+<Tip>If you are looking for step-by-step guides, check out our [How To](../tutorials) section.</Tip>
 
 ## Hello world!
 
@@ -293,4 +293,4 @@ async fn index() -> Html<&'static str> {
 ```
 </CodeGroup>
 ---
-<Tip> If you're looking for other frameworks, we have more examples with other popular frameworks like Tower and Warp [right here](../examples/other). </Tip>
+<Tip> If you want to explore other frameworks, we have more examples with popular ones like Tower and Warp. You can find them [right here](../examples/other). </Tip>
