--- a/examples/serenity.mdx
+++ b/examples/serenity.mdx
@@ -314,4 +314,4 @@ GUILD_ID = "123456789"
 ```
 </CodeGroup>
 ---
-<Tip> If you're looking for other frameworks, we have more examples with other popular frameworks like Tower and Warp [right here](../examples/other). </Tip>
+<Tip> If you want to explore other frameworks, we have more examples with popular ones like Tower and Warp. You can find them [right here](../examples/other). </Tip>
