added gifs, minor copy changes, removed protoc

--- a/introduction/quick-start.mdx
+++ b/introduction/quick-start.mdx
@@ -4,8 +4,8 @@ title: "Quick Start"
 
 We will assume that you have already installed shuttle and logged in.
 If you haven't, you should check out our [installation](./installation) section.
-To run commands with the shuttle command line interface (`cargo shuttle`),
-you'll also need to [install protoc](../support/installing-protoc).
+
+![Shuttle Scaffolding](/images/actix-scaffold-demo.gif)
 
 To initialize your project, simply write:
 
@@ -25,6 +25,7 @@ And to deploy it:
 cargo shuttle deploy
 ```
 
+![Shuttle Deploy](/images/shuttle-deploy-demo.gif)
 *In case you haven't commited the changes to your repo, you'll have to add a `--allow-dirty` flag.*
 
 You can also run your project locally for development, check out our [local run](./local-run) section.
