added gifs, updated copy

--- a/introduction/quick-start.mdx
+++ b/introduction/quick-start.mdx
@@ -2,9 +2,10 @@
 title: "Quick Start"
 ---
 
-We will assume that you have already installed shuttle and logged in.
+We will assume that you have already installed Shuttle and logged in.
 If you haven't, you should check out our [installation](./installation) section.
 
+**Creating your first project**
 ![Shuttle Scaffolding](/images/actix-scaffold-demo.gif)
 
 To initialize your project, simply write:
