Draft re-work of introductory material and welcome

--- a/introduction/the-solution-shuttle.mdx
+++ b/introduction/the-solution-shuttle.mdx
@@ -1,5 +1,5 @@
 ---
-title: "What is Shuttle?"
+title: "The Solution: Shuttle"
 description: "Shuttle is a Rust-native cloud development platform that lets you deploy your app while also taking care of all of your infrastructure."
 ---
 
