--- a/introduction/welcome.mdx
+++ b/introduction/welcome.mdx
@@ -5,25 +5,25 @@ size: "wide"
 ---
 
 <CardGroup>
-  <Card title="Get Started" icon="circle-play" href="/introduction/quick-start">
-    The quickstart guide to set up Shuttle
-  </Card>
   <Card
-    title="What is shuttle?"
+    title="The Problem: Complexity"
     icon="info"
-    href="/introduction/what-is-shuttle"
+    href="/introduction/the-problem-complexity"
   >
-    Learn more about how Shuttle can help you deploy your app
+    The complexity of app deployment is ever rising. Learn why...
   </Card>
   <Card
-    title="Create & deploy a serverless calendar app"
-    icon="calendar"
-    href="/tutorials/serverless-calendar-app"
+    title="Shuttle: The Solution"
+    icon="info"
+    href="/introduction/the-solution-shuttle"
   >
-    Learn how to deploy an example Calendar App with Shuttle
+    Shuttle can help cut through the complexity of app deployment. Learn how...
+  </Card>
+  <Card title="Get Started" icon="circle-play" href="/introduction/quick-start">
+    Ready to dive in? Learn how...
   </Card>
   <Card title="Get Involved" icon="hand" href="/community/get-involved">
-    If you are wondering what the best way is to get involved, here's how
+    Want to get involved? Learn how...
   </Card>
 </CardGroup>
 
