--- a/examples/actix.mdx
+++ b/examples/actix.mdx
@@ -14,7 +14,7 @@ Simple 'Hello world' app using Actix.
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Actix boilerplate.
 
 ```bash
-cargo shuttle init --actix
+cargo shuttle init --template actix
 ```
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
@@ -67,7 +67,7 @@ Simple todo app using Actix & Postgres.
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Actix boilerplate.
 
 ```bash
-cargo shuttle init --actix
+cargo shuttle init --template actix
 ```
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
@@ -189,7 +189,7 @@ Simple 'Hello world' app using Actix.
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Actix boilerplate.
 
 ```bash
-cargo shuttle init --actix
+cargo shuttle init --template actix
 ```
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
