--- a/examples/axum.mdx
+++ b/examples/axum.mdx
@@ -12,7 +12,7 @@ Simple 'Hello world' app using Axum.
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Axum boilerplate.
 
 ```bash
-cargo shuttle init --axum
+cargo shuttle init --template axum
 ```
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
@@ -62,7 +62,7 @@ A websocket example using Axum.
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Axum boilerplate.
 
 ```bash
-cargo shuttle init --axum
+cargo shuttle init --template axum
 ```
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
