--- a/examples/poem.mdx
+++ b/examples/poem.mdx
@@ -12,7 +12,7 @@ Simple 'Hello world' app using Poem.
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Poem boilerplate.
 
 ```bash
-cargo shuttle init --poem
+cargo shuttle init --template poem
 ```
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
@@ -65,7 +65,7 @@ Simple 'todo app' example using MongoDB.
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Poem boilerplate.
 
 ```bash
-cargo shuttle init --poem
+cargo shuttle init --template poem
 ```
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
@@ -183,7 +183,7 @@ Simple 'todo app' example using Postgres.
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Poem boilerplate.
 
 ```bash
-cargo shuttle init --poem
+cargo shuttle init --template poem
 ```
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
