--- a/examples/serenity.mdx
+++ b/examples/serenity.mdx
@@ -25,7 +25,7 @@ To add the bot to a server we need to create an invite link.
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Salvo boilerplate.
 
 ```bash
-cargo shuttle init --serenity
+cargo shuttle init --template serenity
 ```
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
@@ -142,7 +142,7 @@ For more information please refer to the [Discord docs](https://discord.com/deve
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Salvo boilerplate.
 
 ```bash
-cargo shuttle init --serenity
+cargo shuttle init --template serenity
 ```
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
