--- a/examples/thruster.mdx
+++ b/examples/thruster.mdx
@@ -12,7 +12,7 @@ Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute
 the following command to initialize shuttle inside with the Thruster boilerplate.
 
 ```bash
-cargo shuttle init --thruster
+cargo shuttle init --template thruster
 ```
 
 Make sure that your `cargo.toml` file looks as the one below -- having the right
@@ -69,7 +69,7 @@ Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute
 the following command to initialize shuttle inside with the Tide boilerplate.
 
 ```bash
-cargo shuttle init --thruster
+cargo shuttle init --template thruster
 ```
 
 Make sure that your `cargo.toml` file looks as the one below -- having the right
