--- a/examples/tide.mdx
+++ b/examples/tide.mdx
@@ -13,7 +13,7 @@ Simple 'Hello world' app using Tide.
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Tide boilerplate.
 
 ```bash
-cargo shuttle init --tide
+cargo shuttle init --template tide
 ```
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
@@ -56,7 +56,7 @@ And your app is live! 🎉🎉🎉
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Tide boilerplate.
 
 ```bash
-cargo shuttle init --tide
+cargo shuttle init --template tide
 ```
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
