--- a/examples/tower.mdx
+++ b/examples/tower.mdx
@@ -12,7 +12,7 @@ Simple 'Hello world' app using Tower.
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Tower boilerplate.
 
 ```bash
-cargo shuttle init --tower
+cargo shuttle init --template tower
 ```
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
