--- a/tutorials/serverless-calendar-app.mdx
+++ b/tutorials/serverless-calendar-app.mdx
@@ -97,7 +97,7 @@ To initialize the project using the awesome
 
 ```bash
 cargo install cargo-shuttle
-cargo shuttle init --axum --name zerocal zerocal
+cargo shuttle init --template axum --name zerocal zerocal
 ```
 
 and I was greeted with everything I needed to get started:
