--- a/tutorials/url-shortener.mdx
+++ b/tutorials/url-shortener.mdx
@@ -96,7 +96,7 @@ I'm reasonably proficient with it.
 To initialize a rocket project with boilerplate, I can use the shuttle CLI `init` command:
 
 ```bash
-cargo shuttle init --rocket url-shortener
+cargo shuttle init --template rocket url-shortener
 ```
 
 This leaves me with the following `main.rs` file:
