--- a/examples/rocket.mdx
+++ b/examples/rocket.mdx
@@ -12,7 +12,7 @@ Simple 'Hello world' app using Rocket.
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Rocket boilerplate.
 
 ```bash
-cargo shuttle init --rocket
+cargo shuttle init --template rocket
 ```
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
