--- a/examples/salvo.mdx
+++ b/examples/salvo.mdx
@@ -12,7 +12,7 @@ Simple 'Hello world' app using Salvo.
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Salvo boilerplate.
 
 ```bash
-cargo shuttle init --salvo
+cargo shuttle init --template salvo
 ```
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
