--- a/examples/warp.mdx
+++ b/examples/warp.mdx
@@ -11,7 +11,7 @@ Simple 'Hello world' app using Warp.
 Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Warp boilerplate.
 
 ```bash
-cargo shuttle init --warp
+cargo shuttle init --template warp
 ```
 
 Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
