--- a/tutorials/discord-weather-forecast.mdx
+++ b/tutorials/discord-weather-forecast.mdx
@@ -10,6 +10,7 @@ code to get information from an external service.
 
 The full code can be found in
 [this repository](https://github.com/kaleidawave/discord-weather-bot).
+(⚠ not actively maintained, see the official Shuttle docs for up to date examples)
 
 ### Registering our bot
 
@@ -41,10 +42,10 @@ You also want to tick the `MESSAGE CONTENT INTENT` setting so it can read the
 commands input.
 
 To add the bot to the server we will test on, we can use the following URL
-(replace `_application_id_ `in the URL with the ID you copied beforehand):
+(replace `<application_id>` in the URL with the ID you copied beforehand):
 
 ```
-https://discord.com/oauth2/authorize?client_id=*application_id*&scope=bot&permissions=8
+https://discord.com/oauth2/authorize?client_id=<application_id>&scope=bot&permissions=8
 ```
 
 Here, we create it with `permissions=8` so that it can do everything on the
@@ -65,41 +66,39 @@ write it and run it before we can start interacting with it.
 ### [Serenity](https://docs.rs/serenity/latest/serenity/index.html)
 
 Serenity is a library for writing Discord bots (and communicating with the
-Discord API). We can create a new Serenity project which is readily deployable
-on shuttle with: `cargo shuttle init --serenity`
+Discord API).
 
 If you don't have shuttle yet, you can install it with
 `cargo install cargo-shuttle`. Afterwards, run the following in an empty
 directory:
 
 ```bash
-cargo shuttle init --serenity
+cargo shuttle init --template serenity
 ```
 
 After running it you, should see the following generated in `src/main.rs`:
 
 ```rust src/main.rs
-use anyhow::Context as _;
-use serenity::model::application::interaction::{Interaction, InteractionResponseType};
+use anyhow::anyhow;
+use serenity::async_trait;
+use serenity::model::channel::Message;
 use serenity::model::gateway::Ready;
-use serenity::model::prelude::command::CommandOptionType;
 use serenity::prelude::*;
-use serenity::{async_trait, model::prelude::GuildId};
 use shuttle_secrets::SecretStore;
 use tracing::{error, info};
-use weather::get_forecast;
 
 struct Bot;
 
 #[async_trait]
 impl EventHandler for Bot {
-    async fn message(&self, ctx: Context,msg: Message) {
+    async fn message(&self, ctx: Context, msg: Message) {
         if msg.content == "!hello" {
             if let Err(e) = msg.channel_id.say(&ctx.http, "world!").await {
-                error!("Error sending message:{:?}", e);
+                error!("Error sending message: {:?}", e);
             }
         }
     }
+
     async fn ready(&self, _: Context, ready: Ready) {
         info!("{} is connected!", ready.user.name);
     }
@@ -110,23 +109,22 @@ async fn serenity(
     #[shuttle_secrets::Secrets] secret_store: SecretStore,
 ) -> shuttle_serenity::ShuttleSerenity {
     // Get the discord token set in `Secrets.toml`
-    let discord_token = secret_store
-        .get("DISCORD_TOKEN")
-        .context("'DISCORD_TOKEN' was not found")?;
+    let token = if let Some(token) = secret_store.get("DISCORD_TOKEN") {
+        token
+    } else {
+        return Err(anyhow!("'DISCORD_TOKEN' was not found").into());
+    };
 
-    let discord_guild_id = secret_store
-        .get("DISCORD_GUILD_ID")
-        .context("'DISCORD_GUILD_ID' was not found")?;
+    // Set gateway intents, which decides what events the bot will be notified about
+    let intents = GatewayIntents::GUILD_MESSAGES | GatewayIntents::MESSAGE_CONTENT;
 
-    let client = get_client(
-            &discord_token,
-            &weather_api_key,
-            discord_guild_id.parse().unwrap(),
-        )
-        .await;
+    let client = Client::builder(&token, intents)
+        .event_handler(Bot)
+        .await
+        .expect("Err creating client");
 
-        Ok(client.into())
-    }
+    Ok(client.into())
+}
 ```
 
 ### Building an interaction for our bot
@@ -155,7 +153,7 @@ this example. In the `ready` hook we will call `set_application_commands` with a
 `GuildId` to register a command with Discord. Here we register a `hello` command
 with a description and no parameters (Discord refers to these as options).
 
-```rust
+```rust src/main.rs
 #[async_trait]
 impl EventHandler for Bot {
     async fn ready(&self, ctx: Context, ready: Ready) {
@@ -167,6 +165,7 @@ impl EventHandler for Bot {
                     .create_application_command(|command| {
                         command.name("hello").description("Say hello")
                     })
+            })
             .await
             .unwrap();
 
@@ -176,18 +175,18 @@ impl EventHandler for Bot {
 ```
 
 > Serenity has a bit of a different way of registering commands using a
-> callback. If you are working on a larger command application, poise (opens new
-> window)(which builds on Serenity) might be better suited.
+> callback. If you are working on a larger command application, poise
+> (which builds on Serenity) might be better suited.
 
 With our command registered, we will now add a hook for when these commands are
 called using `interaction_create`.
 
-```rust
+```rust src/main.rs
 #[async_trait]
 impl EventHandler for Bot {
-async fn ready(&self, ctx: Context,ready: Ready) { 
-    // ... 
-}
+    async fn ready(&self, ctx: Context,ready: Ready) {
+        // ...
+    }
 
     async fn interaction_create(&self, ctx: Context, interaction: Interaction) {
         if let Interaction::ApplicationCommand(command) = interaction {
@@ -208,7 +207,6 @@ async fn ready(&self, ctx: Context,ready: Ready) {
             }
         }
     }
-
 }
 ```
 
@@ -220,11 +218,9 @@ Token" on the bot screen in one of the previous steps. To register a secret with
 shuttle we create a `Secrets.toml` file with a key value pair. This pair is read
 by the `pool.get_secret("DISCORD_TOKEN")` call in the `ready` hook:
 
-```
-# Secrets.toml
-
-DISCORD*TOKEN="\_your discord token*"
-DISCORD*GUILD_ID="\_the guild we are testing on*"
+```toml Secrets.toml
+DISCORD_TOKEN="your discord token"
+DISCORD_GUILD_ID="the guild we are testing on"
 ```
 
 > Currently secrets are stored using shuttle's database Postgres offering (thus
@@ -254,7 +250,7 @@ Wow! Let's make our bot do something a little more useful.
 
 ### Making the bot do something
 
-There are [https://github.com/public-apis/public-apis](opens new window) that
+There are [public APIs](https://github.com/public-apis/public-apis) that
 can be used for getting information on a variety of topics.
 
 For this demo, we are going to build a bot that gives a forecast for a location.
@@ -274,9 +270,8 @@ to structures using serde, with `cargo add serde`. We will then have a function
 that chains the two requests together and deserializes the forecast to a
 readable result.
 
-> You can skip some of the boilerplate by using direct access on untyped values
-> (opens new window). But we will opt for the better strongly typed structured
-> approach.
+> You can skip some of the boilerplate by using direct access on untyped values.
+> But we will opt for the better strongly typed structured approach.
 
 Here we type some of the structures returned by the API and add
 `#[derive(Deserialize)]` so they can be decoded from JSON. All the keys are in
@@ -285,8 +280,7 @@ to stay aligned with Rust standards. Some are completely different from the Rust
 field name so we use `#[serde(alias = ...)]` on the field to set its matching
 JSON representation.
 
-```rust
-// In weather.rs
+```rust src/weather.rs
 use serde::Deserialize;
 
 #[derive(Deserialize, Debug)]
@@ -296,7 +290,6 @@ pub struct Location {
     localized_name: String,
     country: Country,
 }
-
 
 impl Display for Location {
     fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
@@ -323,17 +316,17 @@ pub struct Headline {
 }
 ```
 
-> The above skips a lot of the fields returned by the API (opens new window),
+> The above skips a lot of the fields returned by the API,
 > only opting for the ones we will use in this demo. If you wanted to type all
 > the fields you could try the new type from JSON feature in rust-analyzer
-> (opens new window)to avoid having to write as much.
+> to avoid having to write as much.
 
 Our location request call also fails if the search we put in returns no places.
 We will create an intermediate type that represents this case and implements
 `std::error::Error`:
 
-```rust
-// Again in weather.rs use std::fmt::Display;
+```rust src/weather.rs
+use std::fmt::Display;
 
 #[derive(Debug)]
 pub struct CouldNotFindLocation {
@@ -352,32 +345,30 @@ impl std::error::Error for CouldNotFindLocation {}
 Now with all the types written, we create a new `async` function that, given a
 place and a client, will return the forecast along with the location:
 
-```rust
-// Again in weather.rs
+```rust src/weather.rs
 pub async fn get_forecast(
     place: &str,
     api_key: &str,
     client: &Client,
 ) -> Result<(Location, Forecast), Box<dyn std::error::Error>> {
-// Endpoints we will use
-    const LOCATION_REQUEST:&str = "http://dataservice.accuweather.com/locations/v1/cities/search";
-    const DAY_REQUEST: &str =
-        "http://dataservice.accuweather.com/forecasts/v1/daily/1day/";
+    // Endpoints we will use
+    const LOCATION_REQUEST: &str = "http://dataservice.accuweather.com/locations/v1/cities/search";
+    const DAY_REQUEST: &str = "http://dataservice.accuweather.com/forecasts/v1/daily/1day/";
 
-    	// The URL to call combined with our API_KEY and the place (via the q search parameter)
+    // The URL to call combined with our API_KEY and the place (via the q search parameter)
     let url = format!("{}?apikey={}&q={}", LOCATION_REQUEST, api_key, place);
-    	// Make the request we will call
+    // Make the request we will call
     let request = client.get(url).build().unwrap();
-    	// Execute the request and await a JSON result that will be converted to a
-    	// vector of locations
+    // Execute the request and await a JSON result that will be converted to a
+    // vector of locations
     let resp = client
         .execute(request)
         .await?
         .json::<Vec<Location>>()
         .await?;
 
-    	// Get the first location. If empty respond with the above declared
-    	// `CouldNotFindLocation` error type
+    // Get the first location. If empty respond with the above declared
+    // `CouldNotFindLocation` error type
     let first_location = resp
         .into_iter()
         .next()
@@ -385,19 +376,18 @@ pub async fn get_forecast(
             place: place.to_owned(),
         })?;
 
-    	// Now have the location combine the key/identifier with the URL
+    // Now have the location combine the key/identifier with the URL
     let url = format!("{}{}?apikey={}", DAY_REQUEST, first_location.key, api_key);
 
-    	let request = client.get(url).build().unwrap();
+    let request = client.get(url).build().unwrap();
     let forecast = client
         .execute(request)
         .await?
         .json::<Forecast>()
         .await?;
 
-    	// Combine the location with the foreact
+    // Combine the location with the foreact
     Ok((first_location, forecast))
-
 }
 ```
 
@@ -411,8 +401,7 @@ add some fields to our bot for holding this data and initialize this in the
 `shuttle_runtime::main` function. Using the secrets feature we can get our
 weather API key:
 
-```rust
-// In main.rs
+```rust src/main.rs
 struct Bot {
     weather_api_key: String,
     client: reqwest::Client,
@@ -422,7 +411,7 @@ struct Bot {
 #[shuttle_runtime::main]
 async fn serenity(
     #[shuttle_secrets::Secrets] secret_store: SecretStore,
-) -> shuttle_srenity::ShuttleSerenity {
+) -> shuttle_serenity::ShuttleSerenity {
     // Get the discord token set in `Secrets.toml`
     let discord_token = secret_store
         .get("DISCORD_TOKEN")
@@ -445,9 +434,13 @@ async fn serenity(
     Ok(client.into())
 }
 
-
-
-    // Set gateway intents, which decides what events the bot will be notified about
+pub async fn get_client(
+    discord_token: &str,
+    weather_api_key: &str,
+    discord_guild_id: u64,
+) -> Client {
+    // Set gateway intents, which decides what events the bot will be notified about.
+    // Here we don't need any intents so empty
     let intents = GatewayIntents::empty();
 
     Client::builder(discord_token, intents)
@@ -466,28 +459,29 @@ async fn serenity(
 We will add our new command with a place option/parameter. Back in the `ready`
 hook, we can add an additional command alongside the existing `hello` command:
 
-```rust
+```rust src/main.rs
+// In ready()
 let commands =
-            GuildId::set_application_commands(&self.discord_guild_id, &ctx.http, |commands| {
-                commands
-                    .create_application_command(|command| {
-                        command.name("hello").description("Say hello")
-                    })
-                    .create_application_command(|command| {
-                        command
-                            .name("weather")
-                            .description("Display the weather")
-                            .create_option(|option| {
-                                option
-                                    .name(OPTION_NAME)
-                                    .description("City to lookup forecast")
-                                    .kind(CommandOptionType::String)
-                                    .required(true)
-                            })
+    GuildId::set_application_commands(&self.discord_guild_id, &ctx.http, |commands| {
+        commands
+            .create_application_command(|command| {
+                command.name("hello").description("Say hello")
+            })
+            .create_application_command(|command| {
+                command
+                    .name("weather")
+                    .description("Display the weather")
+                    .create_option(|option| {
+                        option
+                            .name(OPTION_NAME)
+                            .description("City to lookup forecast")
+                            .kind(CommandOptionType::String)
+                            .required(true)
                     })
             })
-            .await
-            .unwrap();
+    })
+    .await
+    .unwrap();
 ```
 
 Discord allows us to set the expected type and whether it is required. Here, the
@@ -500,27 +494,28 @@ is well-formed (unless Discord sends a bad request) and thus the unwraps here.
 After we have the arguments of the command we call the get_forecast function and
 format the results into a string to return.
 
-```rust
+```rust src/main.rs
+// In the match statement in interaction_create()
 "weather" => {
-                    let argument = command
-                        .data
-                        .options
-                        .iter()
-                        .find(|opt| opt.name == OPTION_NAME)
-                        .cloned();
+    let argument = command
+        .data
+        .options
+        .iter()
+        .find(|opt| opt.name == OPTION_NAME)
+        .cloned();
 
-                    let value = argument.unwrap().value.unwrap();
-                    let place = value.as_str().unwrap();
+    let value = argument.unwrap().value.unwrap();
+    let place = value.as_str().unwrap();
 
-                    match get_forecast(place, &self.weather_api_key, &self.client).await {
-                        Ok((location, forecast)) => {
-                            format!("Forecast: {} in {}", forecast.headline.overview, location)
-                        }
-                        Err(err) => {
-                            format!("Err: {}", err)
-                        }
-                    }
-                }
+    match get_forecast(place, &self.weather_api_key, &self.client).await {
+        Ok((location, forecast)) => {
+            format!("Forecast: {} in {}", forecast.headline.overview, location)
+        }
+        Err(err) => {
+            format!("Err: {}", err)
+        }
+    }
+}
 ```
 
 ### Running
@@ -531,10 +526,10 @@ Now, we have these additional secrets we are using and we will add them to the
 ```toml
 # In Secrets.toml
 # Existing secrets:
-DISCORD\*TOKEN="\*\**"
-DISCORD*GUILD_ID="\*\*\*"
+DISCORD_TOKEN = "***"
+DISCORD_GUILD_ID = "***"
 # New secret
-WEATHER_API_KEY="\*\*\*"
+WEATHER_API_KEY = "***"
 ```
 
 With the secrets added, we can run the server:
@@ -547,7 +542,7 @@ While typing, we should see our command come up with the options/parameters:
 
 ![](/images/discord-weather-forecast-9.png)
 
-Entering “Paris” as the place we get a result with a forecast:
+Entering "Paris" as the place we get a result with a forecast:
 
 ![](/images/discord-weather-forecast-10.png)
 
@@ -567,7 +562,7 @@ Just write:
 cargo shuttle deploy
 ```
 
-And you are good to go. Easy-pease, right?
+And you are good to go. Easy-peasy, right?
 
 You could now take this idea even further:
 
@@ -579,5 +574,5 @@ You could now take this idea even further:
 - Expand on the weather forecast idea by adding more advanced options and
   follow-ups to command options
 - Use the
-  [localization information](https://discord.com/developers/docs/interactions/application-commands#localization)to
-  return information in other languages
+  [localization information](https://discord.com/developers/docs/interactions/application-commands#localization)
+  to return information in other languages
