--- a/tutorials/websocket-chat-app-js.mdx
+++ b/tutorials/websocket-chat-app-js.mdx
@@ -234,7 +234,7 @@ The installation may take a while depending on your Internet connection, so feel
 Once the installation is done, you can start a shuttle project with the following command below (run this in your React project at the packages.json level):
 
 ```bash
-cargo shuttle init --axum
+cargo shuttle init --template axum
 ```
 
 This will prompt you to input a project name - once you've inputted a project name, this will scaffold a project for you that uses Axum, which is a Rust web framework that is easy to build on with simple syntax. The project will be built in a folder within the current working directory with the name you chose. **For this article, we will simply refer to the folder as "API" for clarity.**
