Change subheading title to "The Five Resources"

--- a/resources/overview.mdx
+++ b/resources/overview.mdx
@@ -11,7 +11,7 @@ The next sections go over one by one the five resource areas and how to use them
 - compile-time insurance/assurance that the resource requested is the resource received
 - enables quick prototyping, there is no need for extensive setup, management consoles/tools, etc.
 
-## The Five Plugins
+## The Five Resources
 
 There are five resource areas that Shuttle provides plugins for:
 
