--- a/resources/overview.mdx
+++ b/resources/overview.mdx
@@ -11,9 +11,7 @@ The next sections go over one by one the the resources currently supported by Sh
 - compile-time insurance/assurance that the resource requested is the resource received
 - enables quick prototyping, there is no need for extensive setup, management consoles/tools, etc.
 
-## The Five Resources
-
-There are five resource areas that Shuttle provides plugins for:
+## Resources
 
 ### Amazon Web Services Relational Database Service (AWS RDS)
 
