--- a/resources/overview.mdx
+++ b/resources/overview.mdx
@@ -23,7 +23,7 @@ This plugin allows data to be persisted in a key-value store, which is backed by
 
 ### Shared Databases
 
-The Shared Databases plugin will spin up a shared Postgres or MongoDB database instance, which is shared with other users.  This is the option to choose if database isolation isn't a concern. It's the suitable choice for most database needs when building on Shuttle.
+The Shared Databases plugin will spin up a shared Postgres or MongoDB database instance, which is shared with other users.  This is the option to choose if database isolation isn't a concern. It's the suitable choice for prototyping applications on Shuttle.
 
 ### Secrets
 
