updated init commands

--- a/examples/axum.mdx
+++ b/examples/axum.mdx
@@ -6,7 +6,7 @@ description:
 ---
 
 This section revolves around simple Axum examples you can get quickly started with by following these 3 steps:
-1. Initialize a new Axum project by running the `cargo shuttle init --axum` command
+1. Initialize a new Axum project by running the `cargo shuttle init --template axum` command
 2. Copy pasting the contents of the example you want to deploy -- make sure to check the tabs of the snippet(s) to ensure you are copying the right code/file
 3. Running the `cargo shuttle deploy` command
 
