--- a/examples/axum.mdx
+++ b/examples/axum.mdx
@@ -14,31 +14,6 @@ This section revolves around simple Axum examples you can get quickly started wi
 
 ## Hello world!
 
-Simple 'Hello world' app using Axum.
-
-Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Axum boilerplate.
-
-```bash
-cargo shuttle init --template axum
-```
-
-Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
-
-```toml Cargo.toml
-[package]
-name = "hello-world"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-axum = "0.6.10"
-shuttle-axum = { version = "0.16.0" }
-shuttle-runtime = { version = "0.16.0" }
-tokio = { version = "1.26.0" }
-```
-Your `main.rs` should look like this:
-
-```Rust main.rs
 ```Rust src/main.rs
 use axum::{routing::get, Router};
 
@@ -88,45 +63,14 @@ async fn axum(
         <title>Static Files</title>
     </head>
     <body>
-        <p>This is an example of serving static files with axum and shuttle.</p>
+        <p>This is an example of serving static files with Axum and Shuttle.</p>
     </body>
 </html>
 ```
-
-Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
-
-```toml Cargo.toml
-[package]
-name = "websocket"
-version = "0.1.0"
-edition = "2021"
-
-
-[dependencies]
-axum = { version = "0.6.10", features = ["ws"] }
-chrono = { version = "0.4.23", features = ["serde"] }
-futures = "0.3.25"
-hyper = { version = "0.14.23", features = ["client", "http2"] }
-hyper-tls = "0.5.0"
-serde = { version = "1.0.148", features = ["derive"] }
-serde_json = "1.0.89"
-shuttle-axum = { version = "0.16.0" }
-shuttle-runtime = { version = "0.16.0" }
-shuttle-static-folder = "0.16.0"
-tokio = { version = "1.26.0", features = ["full"] }
-tower-http = { version = "0.3.0", features = ["fs"] }
-```js assets/script.js
-console.log('Hello, World!');
-```
-Your `main.rs` should look like this:
-
 </CodeGroup>
 
 ## Websockets
 
-```rust main.rs
-// main.rs
-use std::{path::PathBuf, sync::Arc, time::Duration};
 <CodeGroup>
 ```rust src/main.rs
 use std::{sync::Arc, time::Duration};
