updated resource privisoning copy

--- a/introduction/what-is-shuttle.mdx
+++ b/introduction/what-is-shuttle.mdx
@@ -21,8 +21,17 @@ You can hit the ground running and swiftly transform your ideas into tangible so
 
 <Info>Our mission is aligned with the wave of Rust becoming the future of web development, as we strive to deliver cutting-edge solutions that leverage the full potential of [the most loved programming language](https://survey.stackoverflow.co/2022/).</Info>
 
-**Supported Frameworks**
+## Supported Frameworks
 
 Currently we support most of the popular Rust web frameworks: [Axum](../examples/axum), [Actix](../examples/actix), [Rocket](../examples/other), [Warp](../examples/other), [Tower](../examples/other), [Salvo](../examples/other), [Poem](../examples/other), [Tide](../examples/other),
   
 And also some of the Discord Bot building frameworks: [Serenity](../examples/serenity), [Poise](https://github.com/shuttle-hq/examples/tree/main/poise/hello-world)
+
+## Resource Provisioning
+
+At this moment, Shuttle supports the provisioning of the following resources:
+- [Shuttle AWS RDS](../resources/shuttle-aws-rds)
+- [Shuttle Persist](../resources/shuttle-persist)
+- [Shuttle Shared Databases](../resources/shuttle-shared-db)
+- [Shuttle Secrets](../resources/shuttle-secrets)
+- [Shuttle Static Folder](../resources/shuttle-static-folder)
