reorganized sidebar, shuttle to Shuttle, its and bits

--- a/introduction/idle-projects.mdx
+++ b/introduction/idle-projects.mdx
@@ -41,4 +41,4 @@ If you pass in `--idle-minutes 0`
 the idle timeout will be disabled and your project will never sleep. 
 This is especially useful for Discord bots, since they will not be 
 awoken by traffic (people using the bot commands in a Discord channel), 
-only by developer interaction through the shuttle CLI.
+only by developer interaction through the Shuttle CLI.
