--- a/introduction/installation.mdx
+++ b/introduction/installation.mdx
@@ -4,9 +4,9 @@ title: "Installation"
 
 ## Prerequisites
 
-To run a shuttle project, you need to install `protoc`, check out our [protoc installation guide](../support/installing-protoc).
+To run a Shuttle project, you need to install `protoc`, check out our [protoc installation guide](../support/installing-protoc).
 
-## Install shuttle
+## Install Shuttle
 
 The `cargo-shuttle` CLI can be installed with a pre-built binary or from source with cargo.
 
