--- a/introduction/local-run.mdx
+++ b/introduction/local-run.mdx
@@ -1,12 +1,12 @@
 ---
 title: "Local Run"
-description: "Test your shuttle application on your local system."
+description: "Test your Shuttle application on your local system."
 ---
 
 We will assume that you have already initialized a project. If you haven't, you should
 check out our [quick start](./quick-start) section.
 
-While deploying to production is easy with shuttle, running your project locally is
+While deploying to production is easy with Shuttle, running your project locally is
 useful for development. To start your project on your local system, while in your
 project directory, run:
 
