--- a/introduction/welcome.mdx
+++ b/introduction/welcome.mdx
@@ -9,7 +9,7 @@ size: "wide"
     The quickstart guide to set up Shuttle
   </Card>
   <Card
-    title="What is shuttle?"
+    title="What is Shuttle?"
     icon="info"
     href="/introduction/what-is-shuttle"
   >
