--- a/introduction/what-is-shuttle.mdx
+++ b/introduction/what-is-shuttle.mdx
@@ -5,6 +5,8 @@ description: "Shuttle is a Rust-native cloud development platform that lets you 
 
 ![](/images/infra-from-code.gif)
 
+<Info>The GIF above displays a sneak-peek for our upcoming console and does a good job of demonstrating how easy it is to add resources to your project.</Info>
+
 As a platform designed with a focus on providing an exceptional developer experience, our goal is to make building and deploying applications a breeze. Shuttle's **<Tooltip tip="Provisioning resources directly from your code, instead of having to deal with complex consoles and yaml files">Infrastructure from Code</Tooltip>** capabilities make provisioning resources simple and hassle-free. Getting a database is just a matter of asking for one with a macro:
 
 ```rust
@@ -26,6 +28,8 @@ You can hit the ground running and swiftly transform your ideas into tangible so
 Currently we support most of the popular Rust web frameworks: [Axum](../examples/axum), [Actix](../examples/actix), [Rocket](../examples/other), [Warp](../examples/other), [Tower](../examples/other), [Salvo](../examples/other), [Poem](../examples/other), [Tide](../examples/other),
   
 And also some of the Discord Bot building frameworks: [Serenity](../examples/serenity), [Poise](https://github.com/shuttle-hq/examples/tree/main/poise/hello-world)
+
+If you need a custom service, you can take a look at our guide [right here](../tutorials/custom-service).
 
 ## Resource Provisioning
 
