--- a/resources/shuttle-aws-rds.mdx
+++ b/resources/shuttle-aws-rds.mdx
@@ -2,7 +2,7 @@
 title: "Shuttle AWS RDS"
 ---
 
-This plugin provisions databases on AWS RDS using [shuttle](https://www.shuttle.rs). The following three engines are supported:
+This plugin provisions databases on AWS RDS using [Shuttle](https://www.shuttle.rs). The following three engines are supported:
 - Postgres
 - MySql
 - MariaDB
