--- a/resources/shuttle-secrets.mdx
+++ b/resources/shuttle-secrets.mdx
@@ -2,7 +2,7 @@
 title: "Shuttle Secrets"
 ---
 
-This plugin manages secrets on [shuttle](https://www.shuttle.rs).
+This plugin manages secrets on [Shuttle](https://www.shuttle.rs).
 
 ## Usage
 Add `shuttle-secrets` to the dependencies for your service, and add a `Secrets.toml` to the root of your project
@@ -20,7 +20,7 @@ both secret files with some of the same secrets for both local runs and deployme
 files.
 
 ## Example
-This snippet shows a shuttle rocket main function that uses the `shuttle_secrets::Secrets` attribute to gain access to a `SecretStore`.
+This snippet shows a Shuttle rocket main function that uses the `shuttle_secrets::Secrets` attribute to gain access to a `SecretStore`.
 
 ```rust main.rs
 #[shuttle_runtime::main]
