--- a/community/open-source.mdx
+++ b/community/open-source.mdx
@@ -5,7 +5,7 @@ description: "Shuttle is Open Source."
 
 We are firm believers that Open Source is the key to a long-term sustainable and
 prosperous technology community. Shuttle builds on Open Source software, and is
-itself Open Source. This means that shuttle is free to use and open to
+itself Open Source. This means that Shuttle is free to use and open to
 contributions.
 
 ### License
@@ -22,5 +22,5 @@ You can learn more about the Apache License 2.0
 
 ### Contribute
 
-Contributions to improve shuttle are welcome. Contribute to shuttle via
+Contributions to improve Shuttle are welcome. Contribute to Shuttle via
 [GitHub](https://github.com/shuttle-hq/shuttle).
