--- a/introduction/workspaces.mdx
+++ b/introduction/workspaces.mdx
@@ -12,7 +12,7 @@ directory name of the workspace or a `Shuttle.toml` with a name key in the root 
 
 ### Caveats
 
-We currently only support one shuttle service per workspace, so you can have many crates in a workspace, but only
+We currently only support one Shuttle service per workspace, so you can have many crates in a workspace, but only
 one crate with a `shuttle_runtime::main` macro. We intend to allow starting several services in deployment too. 
 The long term plan is to have one central service that routes to the other services in the project, sharing resources 
 amongst them. Any feedback on what people would like to see in this area is most welcome.
