--- a/resources/shuttle-persist.mdx
+++ b/resources/shuttle-persist.mdx
@@ -8,7 +8,7 @@ This plugin allows persisting struct that implement `serde::Serialize` and loadi
 Add `shuttle-persist` to the dependencies for your service. You can get this resource using the `shuttle-persist::Persist` attribute to get a `PersistInstance`. Objects can now be saved using `PersistInstance.save()` and loaded again using `PersistInstance.load()`.
 
 ## Example
-This snippet shows a shuttle rocket main function that uses the `shuttle_persist::Persist` attribute to provision and get access to a `PersistInstance`.
+This snippet shows a Shuttle rocket main function that uses the `shuttle_persist::Persist` attribute to provision and get access to a `PersistInstance`.
 
 ```rust main.rs
 #[shuttle_runtime::main]
