--- a/support/troubleshooting.mdx
+++ b/support/troubleshooting.mdx
@@ -6,14 +6,14 @@ This section is aimed at collecting common issues users have to provide quick de
 
 <AccordionGroup>
   <Accordion title="I get an error about protoc not being installed, or protoc being the wrong version.">
-    Since shuttle v0.12.0, `protoc` is a requirement to install `cargo-shuttle` and to use `cargo-runtime`.
+    Since Shuttle v0.12.0, `protoc` is a requirement to install `cargo-shuttle` and to use `cargo-runtime`.
     To install `protoc`, check out our [installation guide](./installing-protoc).
   </Accordion>
-  <Accordion title="I've updated shuttle and my project isn't working anymore.">
+  <Accordion title="I've updated Shuttle and my project isn't working anymore.">
     If you've recently updated shuttle, in order to get your project back up, you need to run:
     `cargo shuttle project restart` and everything should be back in working order.
   </Accordion>
-  <Accordion title="I'm struggling to install shuttle on my M1/M2 Mac, what should I do?">
+  <Accordion title="I'm struggling to install Shuttle on my M1/M2 Mac, what should I do?">
     There's a known bug with arm64 because of the openssl crates being built for x86, rather than arm64. In order to get around that issue, you can either run:
 
     `cargo install --features vendored-openssl cargo-shuttle`
@@ -22,7 +22,7 @@ This section is aimed at collecting common issues users have to provide quick de
 
     `cargo binstall cargo-shuttle`
   </Accordion>
-  <Accordion title="How can I return custom errors with shuttle?">
+  <Accordion title="How can I return custom errors with Shuttle?">
     CustomError is an alias for `anyhow::Error`, the simplest way to output a relevant message here is by using `anyhow::Context` like this:
 
     ```rust
@@ -36,7 +36,7 @@ This section is aimed at collecting common issues users have to provide quick de
 
     Next, pass `#[shuttle_secrets::Secrets] secret_store: SecretStore` as an argument to your `shuttle_runtime::main` function. `SecretStore::get` can now be called to retrieve your API keys and other secrets at runtime.
 
-    For more details, and an explanation on how to use local secrets, head on over here: [shuttle secrets](../resources/shuttle-secrets).
+    For more details, and an explanation on how to use local secrets, head on over here: [Shuttle secrets](../resources/shuttle-secrets).
   </Accordion>
 </AccordionGroup>
 
