fixed syntax highlighting

--- a/migration/migrating-to-shuttle.mdx
+++ b/migration/migrating-to-shuttle.mdx
@@ -63,7 +63,7 @@ async fn main() {
 
 And this is what it looks like after:
 
-```
+```rust
 #[shuttle_runtime::main]
 pub async fn axum (
 #[shuttle_shared_db::Postgres] postgres: PgPool,
