docs: add note about package maintainer

--- a/introduction/installation.mdx
+++ b/introduction/installation.mdx
@@ -39,6 +39,7 @@ cargo install cargo-shuttle
 pacman -S cargo-shuttle
 ```
 
+> This is a community package maintained by [orhun](https://github.com/orhun).
 ## Login
 
 After installing, log in with:
