--- a/fullstack/saas-template.mdx
+++ b/fullstack/saas-template.mdx
@@ -18,9 +18,9 @@ In order to get started, simply run this command:
 
 In order to deploy your project, follow these steps:
 
-1. Login by running npm run shuttle-login
-2. Start your project by running npm run start
-3. And if you are ready to deploy it, run npm run deploy
+1. Login by running `npm run shuttle-login`
+2. Start your project by running `npm run start`
+3. And if you are ready to deploy it, run `npm run deploy`
 
 If you wish to develop locally, you can start a NextJS dev server as well as your Shuttle backend with the `npm run dev` command, and if you wish to stop your deployment, simply run `npm run stop`.
 
