Specify Secrets.toml format in Docs.

--- a/resources/shuttle-secrets.mdx
+++ b/resources/shuttle-secrets.mdx
@@ -19,6 +19,15 @@ If you don't have a `Secrets.dev.toml` file, `Secrets.toml` will be used locally
 both secret files with some of the same secrets for both local runs and deployments, you have to duplicate the secret across both 
 files.
 
+## Toml Format
+
+
+The toml format is a key-value mapping with string values.
+
+```toml
+MY_API_KEY = 'the contents of my API key'
+```
+
 ## Example
 This snippet shows a Shuttle rocket main function that uses the `shuttle_secrets::Secrets` attribute to gain access to a `SecretStore`.
 
