Add detail to postgres/docker AWS RDS setup

--- a/resources/shuttle-aws-rds.mdx
+++ b/resources/shuttle-aws-rds.mdx
@@ -31,6 +31,26 @@ async fn tide(#[shuttle_aws_rds::Postgres(
     )] pool: PgPool) -> ShuttleTide<MyState> { ... }
 ```
 
+The URI should be formatted according to the
+[postgres documentation](https://www.postgresql.org/docs/current/libpq-connect.html#LIBPQ-CONNSTRING),
+for example:
+
+```
+postgresql://
+postgresql://localhost
+postgresql://localhost:5432
+postgresql://localhost/mydb
+postgresql://user@localhost
+postgresql://user:secret@localhost
+postgresql://other@localhost/otherdb?connect_timeout=10&application_name=myapp
+postgresql://localhost/mydb?user=other&password=secret
+```
+
+If you do not specify a `local_uri`, then shuttle will attempt to spin up a docker instance and launch the database inside of it.
+For this to succeed, you must have docker installed and you must also have started the docker engine. If you have not used docker
+before, the easiest way is to [install the desktop app](https://docs.docker.com/get-docker/) and then launch it in order to start
+the docker engine.
+
 ## Example
 This snippet shows the main function of a tide app that uses the `shuttle_aws_rds::Postgres` attribute to provision an RDS Postgres database.
 It gives you an authenticated  [sqlx Pool](https://docs.rs/sqlx/latest/sqlx/pool/index.html), which you can use to interact with the database.
